alignment fix

--- a/src/app/Tap/tap.component.scss
+++ b/src/app/Tap/tap.component.scss
@@ -143,6 +143,7 @@
 }
 
 #search-bar{
+  position: absolute;
   margin-left: 2%;
   width: 80%;
   padding: 8px;
@@ -152,6 +153,11 @@
 
 #search-bar:focus{
   outline: none;
+}
+
+.search mat-icon{
+  margin-top: 1%;
+  margin-left: 85%;
 }
 
 .filter{
@@ -235,7 +241,6 @@ tbody tr:hover {
 
   #search-bar{
     width: 73%;
-    position: absolute;
   }
 
   .filter{
