--- a/src/app/record-detail/record-detail.component.scss
+++ b/src/app/record-detail/record-detail.component.scss
@@ -163,6 +163,7 @@
 }
 
 #search-bar{
+  position: absolute;
   margin-left: 2%;
   width: 80%;
   padding: 8px;
@@ -172,6 +173,11 @@
 
 #search-bar:focus{
   outline: none;
+}
+
+.search mat-icon{
+  margin-top: 1%;
+  margin-left: 85%;
 }
 
 .filter{
